page overflow fixed

--- a/styles/sass/_contacts.scss
+++ b/styles/sass/_contacts.scss
@@ -32,7 +32,7 @@
       padding: 0;
 
       li {
-        padding: 1.5rem 3rem;
+        padding: 1.5rem 0rem;
         display: flex;
         flex-direction: column;
         align-items: center;
